refactor: перенесен в пакет managers refactor: ArrayList для хранения истории заменен на LinkedList